# Heli_ESC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  flash.sh
APP/: CMakeLists.txt
APP/Board_Cfg/Inc/: board_cfg.h  stm32f3xx_hal_conf.h
APP/Board_Cfg/Src/: system_stm32f3xx.c
APP/Main/Inc/: stm32f3xx_it.h
APP/Main/Src/: main.c  stm32f3xx_it.c
BootLoader/: CMakeLists.txt
BootLoader/Board_Cfg/Inc/: stm32f3xx_hal_conf.h
BootLoader/Main/Inc/: stm32f3xx_it.h
BootLoader/Main/Src/: main.c
MCU_Core/: CMakeLists.txt
MCU_Core/Linker/: FLASH_APP.ld  FLASH_BOOTLOADER.ld
MCU_Core/Startup/: startup_app.s  startup_bootloader.s
MCU_Core/Sys/Src/: newlib_stubs.c
STMCubeIDE_Project/: .mxproject  STEVAL-ESC001V1.ioc  STEVAL-ESC001V1.ioc.wb  STEVAL-ESC001V1.settings  STEVAL-ESC001V1.wbdef
STMCubeIDE_Project/Inc/: drive_parameters.h  main.h  mc_config_common.h  mc_configuration_registers.h  mcp_config.h  parameters_conversion.h  parameters_conversion_f30x.h  pmsm_motor_parameters.h  power_stage_parameters.h  stm32f3xx_it.h
STMCubeIDE_Project/STM32CubeIDE/: .cproject  .project
STMCubeIDE_Project/STM32CubeIDE/Debug/: STEVAL-ESC001V1.elf  STEVAL-ESC001V1.list  STEVAL-ESC001V1.map  makefile  objects.list  sources.mk
STMCubeIDE_Project/STM32CubeIDE/Debug/Application/Startup/: subdir.mk
STMCubeIDE_Project/STM32CubeIDE/Debug/Application/User/: aspep.cyclo  aspep.d  aspep.su  bemf_ADC_fdbk_sixstep.cyclo  bemf_ADC_fdbk_sixstep.d  bemf_ADC_fdbk_sixstep.su  main.cyclo  main.d  main.su  mc_api.cyclo  mc_api.d  mc_api.su  mc_app_hooks.cyclo  mc_app_hooks.d  mc_app_hooks.su  mc_config.d  mc_config_common.d  mc_configuration_registers.d  mc_interface.cyclo  mc_interface.d  mc_interface.su  mc_math.cyclo  mc_math.d  mc_math.su  mc_parameters.d  mc_perf.cyclo  mc_perf.d  mc_perf.su  mc_tasks.cyclo  mc_tasks.d  mc_tasks.su  mc_tasks_sixstep.cyclo  mc_tasks_sixstep.d  mc_tasks_sixstep.su  mcp.cyclo  mcp.d  mcp.su  mcp_config.d  motorcontrol.cyclo  motorcontrol.d  (+27 more)
STMCubeIDE_Project/STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32f3xx.cyclo  system_stm32f3xx.d  system_stm32f3xx.su
STMCubeIDE_Project/STM32CubeIDE/Debug/Drivers/STM32F3xx_HAL_Driver/: stm32f3xx_hal.cyclo  stm32f3xx_hal.d  stm32f3xx_hal.su  stm32f3xx_hal_adc.cyclo  stm32f3xx_hal_adc.d  stm32f3xx_hal_adc.su  stm32f3xx_hal_adc_ex.cyclo  stm32f3xx_hal_adc_ex.d  stm32f3xx_hal_adc_ex.su  stm32f3xx_hal_cortex.cyclo  stm32f3xx_hal_cortex.d  stm32f3xx_hal_cortex.su  stm32f3xx_hal_dma.cyclo  stm32f3xx_hal_dma.d  stm32f3xx_hal_dma.su  stm32f3xx_hal_exti.cyclo  stm32f3xx_hal_exti.d  stm32f3xx_hal_exti.su  stm32f3xx_hal_flash.cyclo  stm32f3xx_hal_flash.d  stm32f3xx_hal_flash.su  stm32f3xx_hal_flash_ex.cyclo  stm32f3xx_hal_flash_ex.d  stm32f3xx_hal_flash_ex.su  stm32f3xx_hal_gpio.cyclo  stm32f3xx_hal_gpio.d  stm32f3xx_hal_gpio.su  stm32f3xx_hal_i2c.cyclo  stm32f3xx_hal_i2c.d  stm32f3xx_hal_i2c.su  stm32f3xx_hal_i2c_ex.cyclo  stm32f3xx_hal_i2c_ex.d  stm32f3xx_hal_i2c_ex.su  stm32f3xx_hal_pwr.cyclo  stm32f3xx_hal_pwr.d  stm32f3xx_hal_pwr.su  stm32f3xx_hal_pwr_ex.cyclo  stm32f3xx_hal_pwr_ex.d  stm32f3xx_hal_pwr_ex.su  stm32f3xx_hal_rcc.cyclo  (+18 more)
STMCubeIDE_Project/STM32CubeIDE/Debug/Middlewares/MotorControl/: bus_voltage_sensor.cyclo  bus_voltage_sensor.d  bus_voltage_sensor.su  ntc_temperature_sensor.cyclo  ntc_temperature_sensor.d  ntc_temperature_sensor.su  pid_regulator.cyclo  pid_regulator.d  pid_regulator.su  r_divider_bus_voltage_sensor.cyclo  r_divider_bus_voltage_sensor.d  r_divider_bus_voltage_sensor.su  revup_ctrl_sixstep.cyclo  revup_ctrl_sixstep.d  revup_ctrl_sixstep.su  speed_pos_fdbk_sixstep.cyclo  speed_pos_fdbk_sixstep.d  speed_pos_fdbk_sixstep.su  subdir.mk
STMCubeIDE_Project/Src/: bemf_ADC_fdbk_sixstep.c  main.c  mc_config_common.c  mc_configuration_registers.c  mc_parameters.c  mc_tasks.c  mc_tasks_sixstep.c  pwmc_sixstep.c  stm32_mc_common_it.c  stm32f30x_mc_it.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  sync_registers.c
SW/: .clang-format  CMakeLists.txt  Win_build.ps1  build.sh  erase_flash.sh  features.md  features.txt  flash.sh
SW/APP/: CMakeLists.txt
SW/APP/Board_Cfg/Inc/: board_cfg.h  stm32f3xx_hal_conf.h
SW/APP/Board_Cfg/Src/: board_cfg.c  system_stm32f3xx.c
SW/APP/Main/Inc/: esc_hw_lla.h  stm32f3xx_it.h
SW/APP/Main/Src/: esc_hw_lla.c  main.c  stm32f3xx_it.c
SW/BootLoader/: CMakeLists.txt
SW/BootLoader/Board_Cfg/Inc/: board_cfg.h  stm32f3xx_hal_conf.h
SW/BootLoader/Board_Cfg/Src/: board_cfg.c
SW/BootLoader/Main/Src/: main.c
SW/MCU_Core/: CMakeLists.txt
SW/MCU_Core/CMAKE_TOOLCHAIN/: toolchain-arm-none-eabi.cmake
SW/MCU_Core/Linker/: STM32F303CBTX_FLASH_APP.ld  STM32F303CBTX_FLASH_BTL.ld
